@@ -2,6 +2,7 @@ package eatda.service.story;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -12,43 +13,36 @@ import eatda.exception.BusinessErrorCode;
 import eatda.exception.BusinessException;
 import eatda.service.BaseServiceTest;
 import eatda.service.common.ImageDomain;
+import java.util.Collections;
 import java.util.List;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.multipart.MultipartFile;
 
-public class StoryServiceTest {
+public class StoryServiceTest extends BaseServiceTest {
+
+    @Autowired
+    private StoryService storyService;
 
     @Nested
-    class RegisterStory extends BaseServiceTest {
-
-        private StoryService storyService;
-
-        @BeforeEach
-        void setUp() {
-            storyService = new StoryService(storeService, imageService, storyRepository, memberRepository);
-        }
+    class RegisterStory {
 
         @Test
         void 스토리_등록에_성공한다() {
             Member member = memberGenerator.generate("12345");
             StoryRegisterRequest request = new StoryRegisterRequest("곱창", "123", "미쳤다 여기");
-
             MultipartFile image = mock(MultipartFile.class);
-            when(imageService.upload(image, ImageDomain.STORY)).thenReturn("image-key");
 
             StoreSearchResult store = new StoreSearchResult(
                     "123", "FD6", "음식점 > 한식", "010-1234-5678",
                     "곱창집", "http://example.com",
                     "서울 강남구", "서울 강남구", 37.0, 127.0
             );
+            doReturn(List.of(store)).when(mapClient).searchShops(request.query());
+            when(imageService.upload(image, ImageDomain.STORY)).thenReturn("image-key");
 
-            when(storeService.searchStoreResults(request.query())).thenReturn(List.of(store));
-
-            assertDoesNotThrow(() ->
-                    storyService.registerStory(request, image, member.getId())
-            );
+            assertDoesNotThrow(() -> storyService.registerStory(request, image, member.getId()));
         }
 
         @Test
@@ -57,11 +51,10 @@ public class StoryServiceTest {
             StoryRegisterRequest request = new StoryRegisterRequest("곱창", "999", "미쳤다 여기");
 
             MultipartFile image = mock(MultipartFile.class);
-            when(storeService.searchStoreResults(request.query())).thenReturn(List.of());
+            doReturn(Collections.emptyList()).when(mapClient).searchShops(request.query());
 
-            assertThatThrownBy(() ->
-                    storyService.registerStory(request, image, member.getId())
-            ).isInstanceOf(BusinessException.class)
+            assertThatThrownBy(() -> storyService.registerStory(request, image, member.getId()))
+                    .isInstanceOf(BusinessException.class)
                     .hasMessageContaining(BusinessErrorCode.STORE_NOT_FOUND.getMessage());
         }
     }
